# FPM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: go.mod  go.sum  main.go  process.go  server.go  test.fpm.config.toml  utils.go
backend/commands/: ping.go  start.go
backend/services/: model.go  rest.go  server.go
backend/utils/: configParser.go  config_test.go  process.go  process_test.go  socket.go  utils.go
backend/~/.fpm/: processes.json
cli/src/: cli.rs  connection.rs  main.rs  utils.rs
cli/src/commands/: help.rs  mod.rs  start.rs
cli/src/utils/: color.rs  logs.rs  macros.rs  mod.rs
examples/javascript/: fpm.config.toml  index.js  package.json
src/: cli.rs  main.rs  manager.rs
